html/css/index.css
:root {
  --rowspacing: 125px;
  --negative-rowspacing: -125px; 
}

.row.banner {
  height: 500px;
}

.row.banner .text-wrapper {
  margin-left: 5%;
  width: 30%;
}

.row.banner .title {
  font-size: 50px;
}

.row.banner .sub-title {
  font-size: 1.4em;
  color: #afaeae;
  font-weight: 300;
  font-family: 'Roboto';
}

.row.banner .img {
  max-height: 500px;
  position: absolute;
  left: 45%;
  max-width: 1200px;
  z-index: -1;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  filter: gray;
  /* -webkit-filter: grayscale(1) brightness(0.9);
  filter: grayscale(1) brightness(0.9); */
}

.row.banner .img .overlay {
  display: block;
  background: rgba(255, 255, 255, .05);
  width: 100%;
  height: 600px;
  position: absolute;
}

.row.banner .img img {
  height: 100%;
  width: 100%;
}

/* Row Right */
.row.right .inner-wrapper {
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: row;
}

.row.right {
  height: 300px;
  overflow: hidden;
}

.row.right:nth-of-type(4) .img img {
  margin-bottom: 209px;
}

.row.left .img img {
  margin-top: 98px;
}

.row.right .img {
  max-width: 900px;
  max-height: 300px;
  z-index: -1;
  display: flex;
  margin-left: var(--negative-rowspacing);
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.row.right .text-wrapper {
  width: 350px;
  justify-content: center;
  max-height: 300px;
  margin-left: var(--rowspacing);
}

.row.right .text-wrapper .title {
  font-size: 30px;
}

.row.right .text-wrapper .sub-title {
  font-size: 12px;
  color:#8e8e8e;
  font-family: 'Roboto';
  line-height: 19px;
}

.row.right .text-wrapper .sub-title ul {
  display: table-cell;
}

/* Row Left */
.row.left .inner-wrapper {
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: row;
}

.row.left {
  height: 300px;
  overflow: hidden;
}

.row.left .img {
  max-width: 900px;
  max-height: 300px;
  z-index: -1;
  display: flex;
  margin-right: var(--negative-rowspacing);
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.row.left .text-wrapper {
  width: 350px;
  justify-content: center;
  max-height: 300px;
  margin-right: var(--rowspacing);
}

.row.left .text-wrapper .title {
  font-size: 30px;
}

.row.left .text-wrapper .sub-title {
  font-size: 12px;
  color:#8e8e8e;
  font-family: 'Roboto';
  line-height: 19px;
}


/* Clients */
.row.clients {
  width: 100%;
  color: #8e8e8e;
  font-family: 'Oswald';
  justify-content: space-around;
  display: inline-block;
  text-align:center;
}

.row.clients .client {
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  transition-timing-function: ease-in-out;
}

.row.clients .caption {
  font-family: 'Oswald';
  color: var(--blue);
  font-weight: 500;
  font-size: 40px;
  text-align: left;
  text-transform: uppercase;
  margin: 30px 0;
}

.row.clients .titles {
  display: flex;
  overflow: hidden;
  margin: 0;
  padding: 0 40px;
  border-right: 1px solid #ccc;
  top: 0;
  height: 80px;
}

.row.clients .titles .client .title, .clients .titles .client .subtitle {
  margin: 0 auto;
}

.row.clients .title {
  color: var(--red);
  font-size: 25px;
}

.row.clients .testimonials {
  width: 60%;
  display: flex;
  margin: 0 40px;
  overflow: hidden;
  top: 0;
  position: relative;
  height: 80px;
}

.row.clients .testimonials .text {
  top: 50%;
  position: absolute;
  left: 50%;
  transform: translate(-50%,-50%);
  width: 100%;
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  transition-timing-function: ease-in-out;
}


.row.clients .inner-wrapper {
  flex-direction: column;
}


/* Home Page Servives Slider */
.row.slider {
  display: flex;
  height: 600px;
  overflow: hidden;
}

.row.slider .inner-wrapper {
  height: 100%;
  flex-direction: column;
  overflow: hidden;
}

.row.slider .caption {
  font-family: 'Oswald';
  color: var(--blue);
  font-weight: 500;
  font-size: 40px;
  text-align: end;
  text-transform: uppercase;
  margin: 30px 0;
}

#servicesnav .direction-row {
  overflow: hidden;
}

.row.slider .slide {
  width: 80px;
  display: flex;
  justify-content: center;
  margin: 0 1px;
  overflow: hidden;
  height: 100%;
  cursor: pointer;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}

.row.slider .slide:nth-of-type(1) {
  width: 100%;
}

.row.slider .slide:nth-of-type(2) {
  justify-content: flex-end;
}

.row.slider .slide img {
  object-fit: cover;
  height: 100%;
  width: 100%;
}

.row.slider .sub-caption {
  font-family: 'Oswald';
  font-size: 30px;
  height: 70px;
  font-weight: 100; 
  display: flex;
  color: var(--blue);
  margin: 10px 0;
  overflow: hidden;
}

.row.slider .sub-caption .text {
  margin-top: 0px;
    display: flex;
    align-items: center;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  -o-transition: all 0.2s;
  transition: all 0.2s;
}

.row.slider .slider-overlay {
  display: none;
  position: absolute;
  color: var(--red);
  font-size: 35px;
  font-weight: bold;
  font-family: 'Oswald';
  z-index: 1;
}

/* Slider */

.slider-overlay.remidiation {
  position: absolute;
  transform: rotate(-90deg) translate(-306px, -2px);
  font-family: 'Oswald';
  color: #fff;
  font-size: 30px;
}

.slider-overlay.hazardous {
  position: absolute;
  transform: rotate(-90deg) translate(-306px, -2px);
  font-family: 'Oswald';
  color: #fff;
  font-size: 30px;
}

.slider-overlay.env {
  position: absolute;
  transform: rotate(-90deg) translate(-285px, 63px);
  font-family: 'Oswald';
  color: #fff;
  font-size: 30px;
}

@media only screen and (max-width: 1100px) {
  .row.banner .text-wrapper {
    margin-left: 15%;
  }

  .row.left .text-wrapper, .row.right .text-wrapper {
    margin-right: 60px;
    margin-left: 60px;
  }

  .row.clients .caption, .row.slider .caption {
    margin: 30px 60px;
  }
  .row.slider .sub-caption {
    margin: 10px 20px;
  }
}

@media only screen and (max-width: 600px) {

  .inner-wrapper {
    width: 100vw;
  }

  .row.right:nth-of-type(4) .img img {
    margin-bottom: 49px;
  }

  .row.left .img img {
    margin-top: 16px;
  }

  .row.banner {
    flex-direction: column;
  }
  .row.banner .inner-wrapper {
    margin: 0;
    padding-bottom: 20px;
  }
  .row.banner .text-wrapper {
    margin: 0 auto !important;
    width: 100%;
    text-align: center;
  }

  .row.banner .img {
    position: relative !important;
    left: 0 !important;
  }

  .row.right, .row.left {
    height: 100%;
  }

  .row.right .text-wrapper, .row.left .text-wrapper {
    margin-bottom: 40px;
  }

  .row.right .text-wrapper .title, .row.left .text-wrapper .title {
    text-align: center;
  }

  /* Row Right */
  .row.right .inner-wrapper {
    flex-direction: column;
  }

  /* Row Left */
  .row.left .inner-wrapper {
    flex-direction: column;
  }

  .row.right .inner-wrapper .img {
    order: 2;
  }

  .row.right .inner-wrapper .text-wrapper {
    order: 1;
  }

  .row.clients .caption, #servicesnav .caption {
    text-align: center;
  }

  .row.clients .titles, .row.clients .testimonials {
    justify-content: center;
  }

  .row.clients .testimonials {
    margin: 0;
    width: 100%;
    height: 110px;
  }

  .direction-row {
    flex-direction: column;
  }

  .row.slider {
    height: 900px;
  }
  .row.slider .sub-caption {
    display: none;
  }
  .row.slider .slide {
    width: 100%;
    margin: 0;
    align-items: center;
    margin: 2px 0;
  }
  .row.slider .slide a {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .row.slider img {
    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
  }
  .row.slider .slider-overlay {
    display: flex;
    color: #fff;
    font-size: 36px;
  }

  .row.slider .slide:nth-of-type(2) {
    justify-content: center;
  }

  #contact-section .header {
    padding-right: 0;
    padding-bottom: 20px;
  }

}

